--- a/src/sass/info/reset.scss
+++ b/src/sass/info/reset.scss
@@ -28,7 +28,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 16px;
 	font: inherit;
-	font-family: 'Jost', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	font-style: normal;
 	line-height: 1;
 	vertical-align: baseline;
