--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -75,7 +75,7 @@ html.transition *:after {
     cursor: pointer;
 
     &:hover {
-      color: #395FC2;
+      color: var(--menu-li-a-hover);
 
       &.primary-button {
         color: var(--btn-hover);
@@ -114,7 +114,7 @@ html.transition *:after {
   display: inline-block;
   padding: 14px 25.6px;
   border-radius: 14px;
-  transition: .3s;
+  transition: .1s;
   border: 1.08px solid var(--btn);
   color: var(--btn);
   text-align: center;
@@ -142,14 +142,14 @@ html.transition *:after {
   }
 
   &-light {
-    background: #BFFFF7;
-    color: #143054;
-    border-color: #BFFFF7;
+    background: var(--btn-light);
+    color: var(--btn-light-text);
+    border-color: var(--btn-light);
 
     &:hover {
-      background:  #214C83;
-      border-color: #214C83;
-      color: #BFFFF7;
+      background:  var(--btn-light-hover);
+      border-color: var(--btn-light-hover);
+      color: var(--btn-light-hover-text);
     }
   }
 
@@ -230,6 +230,7 @@ html.transition *:after {
         font-weight: 400;
         line-height: 120%; /* 14.4px */
         margin-top: 18px;
+        opacity: .5;
       }
     }
     
@@ -245,9 +246,14 @@ html.transition *:after {
     align-items: center;
     position: relative;
     border-radius: 11px;
-    border: 1px solid #CDD1D9;
+    border: 1px solid var(--custom-checkbox-border);
     background: var(--colorWhite); 
     cursor: pointer;
+    transition: .15s;
+
+    &:hover {
+      border-color: var(--custom-checkbox-border-hover);
+    }
 
     &::before {
       content: "";
@@ -578,8 +584,11 @@ h2 {
   }
 }
 
-.automation {
+.row.automation {
   padding: 40px 0;
+}
+
+.automation {
   &-border {
     border-right: 1px solid var(--automation-border);
   }
@@ -656,21 +665,61 @@ h5 {
     position: relative;
     z-index: 2;
     overflow: hidden;
-    img {
-      max-width: 100%;
-      position: relative;
-      z-index: 3;
+    &-height {
+      min-height: 542px;
     }
   }
+
   &-graphs {
     position: absolute;
+    top: 0;
     bottom: 0;
     left: 0;
     z-index: 1;
-    svg {
+    width: 380px;
+    transition: 1s;
+    overflow: hidden;
+
+    &.visible {
+      width: 100%;
+    }
+
+    &-img {
       position: absolute;
       bottom: 0;
       left: 0;
+    }
+
+    &-info  {
+      width: 175px;
+      position: absolute;
+      bottom: 245px;
+      left: 293px;
+      z-index: 3;
+      color: var(--textColor);
+      text-align: center;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 23.5px;
+
+      &::before {
+        content: "";
+        width: 1px;
+        height: 177px;
+        background: #878EAA;
+        position: absolute;
+        top: 58px;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+
+    &-table {
+      position: absolute;
+      bottom: 28px;
+      right: 52px;
+      z-index: 3;
     }
   }
 }
@@ -680,7 +729,7 @@ h5 {
     display: none;
   }
   &-nav {
-    border-left: 1px solid var(--tabs-nav-title);
+    border-left: 1px solid var(--tab-nav-list-border);
     li {
       padding: 30px 40px;
       cursor: pointer;
@@ -708,8 +757,8 @@ h5 {
         transition: .3s;
       }
 
-      &.active, &:hover {
-        border-color: var(--tabs-nav-active);
+      &.active {
+        border-color: var(--tabs-nav-li-border-active);
 
         .title, p {
           color: var(--tabs-nav-active);
@@ -719,6 +768,10 @@ h5 {
       &:hover {
         background: var( --tabs-nav-li-bg);
         border-color: var(--tabs-nav-li-border-hover);
+
+        .title {
+          color: var(--tabs-nav-active);
+        }
       }
     }
   }
@@ -739,7 +792,7 @@ h5 {
 }
 
 .automation {
-  padding-top: 90px;
+  padding: 90px 0;
   h2 {
     margin-bottom: 40px;
   }
@@ -843,13 +896,31 @@ h5 {
   &-bottom {
     text-align: center;
   }
-}
 
-.automation-image {
-  width: 100%;
-  max-width: 877px;
-  display: block;
-  margin: 8px auto 60px;
+  &-image {
+    width: 100%;
+    max-width: 877px;
+    display: block;
+    margin: 8px auto 60px;
+
+    &-animation {
+      display: block;
+      width: 100%;
+      max-width: 877px;
+      margin: 8px auto 60px;
+
+      &-svg {
+        width: 258px;
+        overflow: hidden;
+        transition: 1s;
+
+        &.visible {
+          width: 100%;
+        }
+      }
+      
+    }
+  }
 }
 
 .p-info {
@@ -868,7 +939,24 @@ h5 {
   &-image {
     width: 100%;
     max-width: 100%;
-    padding-top: 8px;
+
+    &-animation {
+      display: block;
+      width: 100%;
+      max-width: 100%;
+      padding-top: 8px;
+
+      &-svg {
+        width: 0;
+        overflow: hidden;
+        transition: 1s;
+
+        &.visible {
+          width: 100%;
+        }
+      }
+      
+    }
   }
 
   &-info {
@@ -980,6 +1068,11 @@ h5 {
         font-weight: 500;
         line-height: 110%; 
         border-bottom: 1px dashed var(--price-subtitle);
+        cursor: pointer;
+
+        &:hover {
+          border-color: transparent !important;
+        }
       }
 
       label {
@@ -1039,6 +1132,25 @@ h5 {
     flex-wrap: wrap;
     justify-content: space-between;
     row-gap: 40px;
+    position: relative;
+
+    .slick-arrow {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: calc((100% - 250px)/2);
+      z-index: 10;
+    }
+
+    .transparent {
+      &-prev {
+        left: 0;
+      }
+
+      &-next {
+        right: 0;
+      }
+    }
   }
 
   &-item {
@@ -1179,6 +1291,10 @@ h5 {
     line-height: 110%; /* 17.6px */
     text-decoration-line: underline;
     padding: 8px 0;
+
+    &:hover {
+      text-decoration: none;
+    }
   }
 }
 
@@ -1506,7 +1622,7 @@ h5 {
       font-size: 16px;
       font-style: normal;
       font-weight: 400;
-      line-height: 150%; /* 24px */
+      line-height: 180%; /* 24px */
       display: none;
     }
 
@@ -1556,10 +1672,6 @@ h5 {
         font-style: normal;
         font-weight: 400;
         line-height: 150%; /* 24px */
-        transition: .3s;
-        svg {
-          transition: .3s;
-        }
 
         &:hover {
           color: var(--footer-item-h4);
@@ -1592,8 +1704,6 @@ h5 {
   svg {
     width: 44px;
     height: 44px;
-    border: 1px solid #5B6283;
-    border-radius: 14px;
     color: var(--mob-btn-color);
   }
 
