--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -97,6 +97,22 @@
   animation-name: fadeIn;
 }
 
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.fadeInDown {
+  animation-name: fadeInDown;
+}
+
 @import 'info/reset';
 @import 'info/fonts'; 
 @import 'info/grid';
