--- a/src/sass/info/variables.scss
+++ b/src/sass/info/variables.scss
@@ -77,6 +77,8 @@ html {
   --menu-li-a-hover: #395FC2;
   --custom-checkbox-border: #CDD1D9;
   --custom-checkbox-border-hover: #575E80;
+  --slick-dots: #D5D8E1;
+  --slick-dots-active: #5B6283;
 
 
   .price-item-list li:before {
@@ -148,7 +150,8 @@ html {
     --menu-li-a-hover: #5BE7FE;
     --custom-checkbox-border: #68738A;
     --custom-checkbox-border-hover: #BFFFF7;
-
+    --slick-dots: #5B6283;
+    --slick-dots-active: #D5D8E1;
 
 
     .price-item-list li:before {
@@ -230,7 +233,8 @@ html {
     --menu-li-a-hover: #395FC2;
     --custom-checkbox-border: #CDD1D9;
     --custom-checkbox-border-hover: #575E80;
-
+    --slick-dots: #D5D8E1;
+    --slick-dots-active: #5B6283;
   
   
     .price-item-list li:before {
@@ -313,6 +317,8 @@ html {
     --menu-li-a-hover: #5BE7FE;
     --custom-checkbox-border: #68738A;
     --custom-checkbox-border-hover: #BFFFF7;
+    --slick-dots: #5B6283;
+    --slick-dots-active: #D5D8E1;
 
 
 
@@ -397,6 +403,8 @@ html {
     --menu-li-a-hover: #395FC2;
     --custom-checkbox-border: #CDD1D9;
     --custom-checkbox-border-hover: #575E80;
+    --slick-dots: #D5D8E1;
+    --slick-dots-active: #5B6283;
   
     .price-item-list li:before {
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='17' viewBox='0 0 17 17' fill='none'%3E%3Cpath d='M13.9177 3.39404L15.3333 4.80967L6.33331 13.8097L1.33331 8.80967L2.74894 7.39404L6.33331 10.9815L13.9177 3.39404Z' fill='%23212529'/%3E%3C/svg%3E");
